Integerated dublin bus api

--- a/config/travel_api_urls.yml
+++ b/config/travel_api_urls.yml
@@ -1,9 +1,10 @@
 default: &default
   dublin_bus:           'https://data.smartdublin.ie/cgi-bin/rtpi/'
-  bus_stop:             '/busstopinformation'
+  bus_stop:             'busstopinformation'
   google_map_api:       'https://maps.googleapis.com/maps/api'
   nearby_search_place:  '/place/nearbysearch'
   response_type:        '/json?'
+  realtimebusinformation: 'realtimebusinformation'
 
 development:
   <<: *default
