--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,18 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-
 development:
-  <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+  adapter: postgresql
+  encoding: unicode
+  database: smart_travel_dev
+  pool: 5
+  username: postgres
+  password: nitanshu
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: smart_travel_test
+  pool: 5
+  username: postgres
+  password: nitanshu
 
-production:
-  <<: *default
-  database: db/production.sqlite3
